[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profinet-py"
version = "0.4.0"
description = "PROFINET IO-Controller library for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [    
    {name = "f0rw4rd"},
]
maintainers = [
    {name = "f0rw4rd"},
]
keywords = [
    "profinet",
    "industrial",
    "ics",
    "ot",
    "plc",
    "automation",
    "siemens",
    "dcp",
    "rpc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",    
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
[project.urls]
Homepage = "https://github.com/f0rw4rd/profinet-py"
Repository = "https://github.com/f0rw4rd/profinet-py"
"Original Project" = "https://github.com/alfredkrohmer/profinet"
Issues = "https://github.com/f0rw4rd/profinet-py/issues"

[project.scripts]
profinet = "profinet.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["profinet*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "integration: Integration tests requiring Docker + root (deselected by default)",
]
addopts = "-m 'not integration'"
